--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 @layer base {
   :root {
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
+}
+body {
+  height: 90vh;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+
+  background-color: #f9f9f9;
+  box-sizing: border-box;
 }
